trying out vue, changed api endpoints to use auth3

--- a/src/forgot.html
+++ b/src/forgot.html
@@ -36,7 +36,7 @@
 							<div id="recaptcha" class="g-recaptcha" data-sitekey="6LdxLCcUAAAAAP8ZPgCUiGy_eY_AzLIJgLt3BSFD" data-size="invisible" data-bind="btn-finish" data-callback="finishRecovery"></div>
 							<div class="button-row">
 								<a href="./">Sign in</a>
-								<button class="btn btn-primary" id="btn-next">
+								<button class="btn btn-primary" id="btn-finish">
 								Send email
 								<link class="rippleJS">
 								</button>
