--- a/src/authorize.html
+++ b/src/authorize.html
@@ -7,7 +7,7 @@
 		<link href='https://fonts.googleapis.com/css?family=Roboto:300,400' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" type="text/css" href="./css/authorize.css">
 		<meta name="theme-color" content="#225378">
-		<title>Authorize <? $application_name ?></title>
+		<title>Authorize application</title>
 	</head>
 	<body>
 		<div class="bg-panel"></div>
@@ -16,29 +16,20 @@
 				<div class="progress">
 			    	<div class="indeterminate"></div>
 			  	</div>
-				<section class="input-carousel">
+				<section class="input-carousel" id="carousel">
 					<div class="carousel-container" id="carousel-container" data-offset="0">
 
 						<form class="carousel-item" id="form-1">
 							<header class="modal-header">
 								<h1>Authorize this application?</h1>
-								<h2><em class="application-name" id="app-name"><?= $application_name ?></em> will be able to:</h2>
+								<h2><em class="application-name" id="app-name"></em> <span id="message">Checking request data...</span></h2>
 							</header>
 
-							<ul class="scope-list">
-								<?php foreach ($scopes as $scope) { ?>
-								<li class="scope" id="<?= $scope->getIdentifier() ?>">
-									<?= $scope->getDescription() ?>
-								</li>
-								<?php } ?>
-							</ul>
+							<ul class="scope-list" id="scope-list"></ul>
 							
 							<div class="button-row">
-								<a href="./authorize/deny">Cancel</a>
-								<button class="btn btn-primary" id="btn-next" type="button">
-								Authorize
-								<link class="rippleJS">
-								</button>
+								<a href="" id="btn-deny">Cancel</a>
+								<button class="btn btn-primary" id="btn-next" type="button">Authorize<link class="rippleJS"></button>
 							</div>
 						</form>
 					</div>
