--- a/src/index.html
+++ b/src/index.html
@@ -41,9 +41,8 @@
 								</button>
 							</div>
 							<div class="footer-row">
-								or
-								<a href="#">Sign in with your Google account</a>
-								<!-- <button class="btn btn-with-icon btn-social-signin btn-google"><i class="mdi mdi-google"></i>Sign in with Google</button> -->
+								<!-- or
+								<a href="#">Sign in with your Google account</a> -->
 							</div>
 						</div>
 
@@ -83,7 +82,7 @@
 								<h1>Two factor</h1>
 								<section class="account-banner">
 									<p>
-										Enter the code from your mobile device, or use a backup code.
+										Enter the code from your mobile device, or use a recovery code.
 									</p>
 								</section>
 							</header>
