--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
 								</section>
 							</header>
 							<div class="underlined-input">
-								<input type="password" name="password" id="password-input" />
+								<input type="password" name="password" id="password-input" autocomplete="new-password" />
 								<div class="reacts-to">
 									<label class="input-placeholder">Password</label>
 									<div class="input-underline">
